Set environment variable for Runner Tool Cache in Go test workflow

--- a/.gitea/workflows/go-test.yml
+++ b/.gitea/workflows/go-test.yml
@@ -8,6 +8,8 @@ on:
 
 jobs:
   test:
+    env:
+      RUNNER_TOOL_CACHE: /toolcache # Runner Tool Cache
     name: Run Tests
     runs-on: ubuntu-latest
 
