--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -24,4 +24,4 @@ jobs:
       run: go mod download
 
     - name: Run tests
-      run: go test -v git.homelab.lan/denga/go-real-world-example/internal/...
+      run: go test -v github.com/denga/go-real-world-example/internal/...
